# sandbox

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/turborepo-lab/: devcontainer.json
bdd-elevator/e2e/step_definitions/: かごが移動する.steps.ts
hjq/: CHANGELOG.md  README.md  hjq.cabal  package.yaml  stack.yaml
hjq/.stack-work/: stack.sqlite3
hjq/.stack-work/install/x86_64-linux/17166516f007a2cc56c7c83074dccd064f7268fefb365a5b023de6853f4d6fa7/9.10.3/pkgdb/: hjq-0.1.0.0-7f3TtmWSQlFFm1Ir51WFLZ.conf  package.cache
hjq/.stack-work/install/x86_64-linux/5456064977f0655e56cd5bcc9e9ede64eee11dc3bfe5ff56a6d07caad3d35c49/9.6.7/pkgdb/: hjq-0.1.0.0-CYb1jdNc2NY1jCkZwouTLF.conf  package.cache
hjq/.stack-work/install/x86_64-linux/84d434dca807a52b1eb4989ec94367a6957625f279cc790322dc146486edfb90/9.6.7/pkgdb/: hjq-0.1.0.0-CYb1jdNc2NY1jCkZwouTLF.conf  package.cache
hjq/.stack-work/install/x86_64-linux/9b95456112eef7de696b363e223eb888e40ed917d4385554d03486a2a2164c62/9.6.7/pkgdb/: hjq-0.1.0.0-Lt0UvNNuhK74ZMIFmzcY5B.conf  package.cache
hjq/app/: Main.hs
hjq/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
hjq/src/Data/: Hjq.hs
hjq/src/Data/Hjq/: Parser.hs  Query.hs
hjq/test/: Spec.hs
hs-atcoder/: abc300-a.hs  abc301-a.hs  abc302-a.hs  abc303-a.hs  abc304-a.hs  flake.nix
hs-cli-practice/: CHANGELOG.md  README.md  hs-cli-practice.cabal  package.yaml  stack.yaml
python-dev-container/.devcontainer/: devcontainer.json
python-devcontainer/: pyproject.toml
python-devcontainer/.devcontainer/: Dockerfile
src/: controller.py  vending_machine.py  yen.py
study-vending-machine/: pyproject.toml
study-vending-machine/src/: main.py
tdd-vending-machine/src/: vending_machine.py
tdd-vending-machine/tests/src/: test_vending_machine.py  test_yen.py
tests/src/: test_controller.py  test_vending_machine.py  test_yen.py
turborepo-lab/: docker-compose.local.yml
turborepo-lab/nestjs-prisma/: .gitignore  README.md  package.json  pnpm-lock.yaml  turbo.json
turborepo-lab/nestjs-prisma/apps/api/: package.json  tsconfig.json  vite.config.ts
turborepo-lab/nestjs-prisma/apps/api/src/: main.ts
turborepo-lab/nestjs-prisma/apps/api/src/prisma/: prisma.module.ts  prisma.service.ts
turborepo-lab/nestjs-prisma/apps/web/app/: page.tsx
turborepo-lab/nestjs-prisma/apps/web/app/components/: CreateUserInput.tsx
(+77 files in other folders)
