[tool.poetry]
name = "dev-container-test"
version = "0.1.0"
description = ""
authors = ["r-yamamoto <r-yamamoto@creationline.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest-watch = "^4.2.0"
pytest = "^8.3.2"
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 120
skip-string-normalization = true

[tool.isort]
profile = "black"

